<resources>
    <string name="app_name">InventoryApp</string>

    <!-- Main Activity -->
    <string name="sale_button">Sale</string>

    <!--Label and Sample texts -->
    <string name="item_label_name">Name</string>
    <string name="item_label_price">Price</string>
    <string name="item_label_quantity">Quantity</string>
    <string name="item_price_sample">$10</string>
    <string name="item_quantity_sample">2</string>


    <!-- Text Hints-->
    <string name="hint_edit_name">Enter name</string>
    <string name="hint_edit_price">Enter price</string>
    <string name="hint_edit_quantity">Enter quantity</string>
    <string name="edit_price_sign">$</string>


    <!-- Button Labels -->
    <string name="button_label_order">Order From Supplier</string>
    <string name="button_label_delete">Delete this item</string>
    <string name="button_decrease">-</string>
    <string name="button_increase">+</string>

    <!-- Titles -->
    <string name="detail_activity_title_new_inventory">New Inventory</string>
    <string name="detail_activity_title_edit_inventory">Edit Inventory</string>

    <!-- Menu Action texts -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete All</string>
    <!-- dialog message -->
    <string name="delete_dialog_msg">Delete this inventory?</string>
    <string name="delete_all_dialog_msg">Delete all inventory?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Toast Messages -->
    <string name="editor_delete_failed">Fail to delete</string>
    <string name="editor_delete_successful">Successfully deleted</string>
    <string name="editor_save_failed">Error with saving</string>
    <string name="editor_save_successful">Saved! </string>
    <string name="editor_no_field">Need to fill all fields</string>
    <string name="editor_no_negative">Price or Quantity can no\'t be negative</string>
    <string name="editor_sale_negative">Quantity is zero, need to order more supply</string>
    <string name="editor_number_too_large">Number can\'t exceed 999,999,999</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <string name="inventory_title">Inventory Title</string>
    <string name="quantity_title">Quantity</string>
    <string name="empty_view_title_text">Click button on the right bottom corner to start!</string>
    <string name="editor_sale_failed">Sale button failed</string>
    <string name="editor_sale_successful">Sell 1 item!</string>


</resources>
