<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for single list item of inventory -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:descendantFocusability="blocksDescendants">

    <!-- display name, current quantity, price -->
    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/padding_horizontal"
        android:gravity="center_vertical"
        tool:text="@string/hint_edit_name"
        android:textAppearance="@style/ListItemText"/>

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/item_name"
        android:layout_toRightOf="@id/item_name"
        android:layout_toStartOf="@+id/item_quantity"
        android:layout_toLeftOf="@+id/item_quantity"
        android:padding="@dimen/padding_horizontal"
        android:gravity="center_vertical|end"
        tool:text="@string/item_price_sample"
        android:textAppearance="@style/ListItemText"/>

    <TextView
        android:id="@+id/item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/sale_button"
        android:layout_toLeftOf="@+id/sale_button"
        android:padding="@dimen/padding_horizontal"
        android:gravity="center_vertical"
        tool:text="@string/item_quantity_sample"
        android:textAppearance="@style/ListItemText"/>


    <!-- Sale button to reduce quantity-->
    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/padding_horizontal"
        android:layout_marginRight="@dimen/padding_horizontal"
        android:layout_marginTop="@dimen/padding_horizontal"
        android:layout_marginBottom="@dimen/padding_horizontal"
        android:text="@string/sale_button"
        android:textSize="16sp" />


</RelativeLayout>